--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,7 +35,6 @@ $tertiaryColor: rgb(234, 234, 234);
     height: $iconWidth;
     width: $iconWidth;
     object-fit: contain;
-    /* Сохраняет пропорции без обрезки */
 }
 
 .icon:hover {
@@ -44,6 +43,9 @@ $tertiaryColor: rgb(234, 234, 234);
 
 .small-icon {
     height: $smallIconWidth;
+    padding: 3px;
+    background-color: $iconBackground;
+    border-radius: 30%;
 }
 
 .backgrounded {
@@ -186,14 +188,16 @@ body {
         background-color: red;
         border-radius: 50%;
         opacity: 0;
-        transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        transition: opacity 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        animation: pulse 1.5s infinite;
+        animation-play-state: paused;
     }
 }
 
 #laptop:hover {
     .red-dot {
         opacity: 1;
-        animation: pulse 1.5s infinite;
+        animation-play-state: running;
     }
 }
 
@@ -218,12 +222,12 @@ body {
         transform: translate(-100%, -50%);
     }
 
-    25% {
-        transform: translate(-25%, -50%) rotate(-20deg) skew(5deg, 0deg);
+    50% {
+        transform: translate(-20%, -50%) rotate(-20deg) skew(5deg, 0deg);
     }
 
     75% {
-        transform: translate(-25%, -50%) rotate(-20deg) skew(5deg, 0deg);
+        transform: translate(-20%, -50%) rotate(-20deg) skew(5deg, 0deg);
     }
 
     100% {
@@ -251,7 +255,7 @@ body {
 
 @keyframes forKids {
     0% {
-        transform: translate(-50%, -200%);
+        transform: translate(-50%, -500%);
     }
 
     50% {
@@ -292,7 +296,7 @@ body {
     >a {
         >div:hover {
             >img {
-                animation: forWomen 0.6s;
+                animation: forWomen 0.5s;
             }
         }
     }
@@ -312,8 +316,112 @@ body {
     >a {
         >div:hover {
             >img {
-                animation: forKids 0.5s;
+                animation: forKids 0.7s;
             }
         }
     }
+}
+
+.offcanva {
+    border-right: none !important;
+    padding: 0;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background-color: $elementBackground;
+    width: 50vw;
+}
+
+.arrow {
+    height: 75%;
+    top: 50%;
+    left: 50%;
+    transition: 0.3s;
+    transform: translate(600%, -50%);
+}
+
+.ofcanva-dropdown:hover {
+    .arrow {
+        transform: translate(400%, -50%);
+    }
+}
+
+#colorModeSwitch {
+    border: 3px solid;
+    border-radius: 50px;
+
+    >div {
+        height: 120%;
+        aspect-ratio: 1 / 1;
+        top: 50%;
+        left: 50%;
+        transition: 0.6s;
+    }
+
+    #sun {
+        height: 75%;
+        aspect-ratio: 1 / 1;
+        top: 50%;
+        left: 50%;
+        transition: 0.3s;
+    }
+
+    #moon {
+        height: 75%;
+        aspect-ratio: 1 / 1;
+        top: 50%;
+        left: 50%;
+        transition: 0.3s;
+    }
+}
+
+#colorModeSwitch.light {
+    background-color: $elementBackground;
+    border-color: #fff;
+
+    >div {
+        border: 3px solid #fff;
+        transform: translate(0%, -50%);
+    }
+
+    #sun {
+        transform: translate(50%, -50%);
+    }
+
+    #moon {
+        transform: translate(-50%, -50%);
+    }
+}
+
+#colorModeSwitch.dark {
+    background-color: #fff;
+    border-color: $elementBackground;
+
+    >div {
+        border: 3px solid $elementBackground;
+        transform: translate(-100%, -50%);
+    }
+
+    #sun {
+        transform: translate(-50%, -50%);
+    }
+
+    #moon {
+        transform: translate(-150%, -50%);
+    }
+}
+
+.fluid-section {
+    background-color: $elementBackground;
+}
+
+#car {
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transition: 0.3s;
+    transform: translate(-150%, -100%) scale(0.25);
+}
+
+#car.scrolled {
+    transform: translate(-75%, -50%);
 }
