Add wishlist and checkout

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -967,3 +967,12 @@ select.form-select:focus {
     color: #6c6cd9;
     font-size: 20px;
 }
+
+.add-to-wishlist-btn {
+    color: #FFF;
+    background-color: #6c6cd9;
+}
+.add-to-wishlist-btn:hover {
+    color: #FFF;
+    background-color: #5454aa;
+}
