--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -881,13 +881,14 @@ body {
 }
 
 #notFound {
+    width: 100vw;
     img:nth-child(1) {
-        width: 0.95%;
         padding-left: 3px;
         padding-right: 3px;
-        height: 30vw;
-        top: -22%;
-        left: 24.375%;
+        width: 10vw;
+        height: 10vw;
+        top: -5vw;
+        left: 15vw;
     }
 
     img:nth-child(1):hover {
@@ -896,16 +897,17 @@ body {
     }
 
     img:nth-child(2) {
-        height: 8.5%;
-        top: 25%;
-        left: 20%;
+        width: 10vw;
+        height: 10vw;
+        top: 10vw;
+        left: 15vw;
     }
 
     img:nth-child(3) {
-        height: 40%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        width: 100vw;
+        height: 20vw;
+        top: 15vw;
+        left: 0vw;
     }
 }
 
